--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "glamor": "^2.20.24",
     "glamorous": "^1.0.1",
     "i18next": "^7.1.3",
+    "i18next-browser-languagedetector": "^1.0.1",
+    "i18next-fetch-backend": "0.0.1",
     "next": "^2.1.0",
+    "node-fetch": "^1.6.3",
     "path-match": "^1.2.4",
     "react": "^15.5.0",
     "react-dom": "^15.5.0",
