--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     ]
   },
   "scripts": {
-    "start": "node server.next.js",
+    "dev": "node server.next.js",
     "compile": "webpack",
+    "build": "next build",
+    "start": "NODE_ENV=production node server.next.js -p $PORT",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -31,6 +33,7 @@
     "i18next": "^7.1.3",
     "i18next-browser-languagedetector": "^1.0.1",
     "i18next-fetch-backend": "0.0.1",
+    "i18next-xhr-backend": "^1.4.1",
     "next": "^2.1.0",
     "node-fetch": "^1.6.3",
     "path-match": "^1.2.4",
